<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.isi.frsf.edu.ar.lab01c2016.Actividad"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_weight="0.02">>

         <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:id="@+id/textView2"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:text="@string/label2"
        android:id="@+id/textView3"
        android:layout_weight="0.02"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:text="@string/label3"
        android:id="@+id/textView4"
        android:layout_weight="0.02"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:text="@string/label4"
        android:id="@+id/textView5"
        android:layout_weight="0.09"
        android:textSize="18dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_weight="0.02"
        android:progress="26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=".."
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/label5"
        android:id="@+id/textView7"
        android:layout_weight="0.02"
        android:textSize="18dp" />

    <TextView
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:text="@string/label8"
        android:id="@+id/textView8"
        android:layout_weight="0.02"
        android:textSize="18dp" />

    <CheckBox
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:text="@string/label6"
        android:id="@+id/checkBox"
        android:layout_weight="0.02"
        android:checked="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label7"
        android:id="@+id/button"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView9"
        android:layout_weight="0.02"
        android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
